Alterada a exibicao de coluna de acoes no grid.

--- a/src/Paper.Host/Client/src/assets/css/style.sass
+++ b/src/Paper.Host/Client/src/assets/css/style.sass
@@ -6,3 +6,14 @@
 
 .pointer
   cursor: pointer
+
+.fixed-column
+  position: absolute
+  width: 3em
+  right: 0
+  background-color: white
+  padding: 0 3px !important
+  height: 30px !important
+
+.menu-actions
+  height: 30px !important
