Criados novos componentes para exibicao de dialog

--- a/src/Paper.Host/Client/src/assets/css/style.sass
+++ b/src/Paper.Host/Client/src/assets/css/style.sass
@@ -17,3 +17,15 @@
 
 .menu-actions
   height: 30px !important
+
+.view-title
+  width: 30%
+  max-width: 30%
+
+.view-details
+  width: 70%
+  max-width: 70%
+
+.view-details-menu
+  width: 60%
+  max-width: 60%
